feat(i18n): add internationalization support with English and Simplified Chinese translations
- Create i18n module to handle language initialization and switching.
- Implement TranslateDirective for dynamic translations in Lit components.
- Add English and Simplified Chinese translations for common terms and views.
- Introduce language switcher component for user language selection.

--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -8,7 +8,9 @@
     "experimentalDecorators": true,
     "skipLibCheck": true,
     "types": ["vite/client"],
-    "useDefineForClassFields": false
+    "useDefineForClassFields": false,
+    "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true
   },
   "include": ["src"]
 }
