--- a/ui/package.json
+++ b/ui/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@noble/ed25519": "3.0.0",
     "dompurify": "^3.3.1",
+    "i18next": "^25.8.0",
+    "i18next-browser-languagedetector": "^8.2.0",
     "lit": "^3.3.2",
     "marked": "^17.0.1",
     "vite": "7.3.1"
