chore: change package name to scoped @yeaosound/openclaw

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "openclaw",
+  "name": "@yeaosound/openclaw",
   "version": "2026.2.3",
   "description": "WhatsApp gateway CLI (Baileys web) with Pi RPC agent",
   "keywords": [],
